Simplified Advanced Factory Url validation. Reduced number of exceptions